# Practice_2Sychuk

./: .gitignore  CMakeLists.txt  client.cpp  main.cpp  structures.cpp  structures.h  АБ-320_Сычук_АА_ПР2.docx
